feat: improve station and mobile exploration
